# Beolyd5

./: HEOS_CLI_MARKDOWN.md  HEOS_CLI_ProtocolSpecification.docx  app.py  boot.sh  prereqs.sh  raspberry-os-boot.sh  raspberry-os-build.sh  raspberry-os-install.sh  raspberry-os-prereqs.sh  raspberry-setup.sh  raspberry-update.sh
.github/workflows/: build-ui.yml
src/ui/: package-lock.json  package.json
src/ui/src-tauri/: Cargo.toml  tauri.conf.json
src/ui/src-tauri/src/: hw_controller.rs  main.rs
src/ui/src-tauri/src/heos/: client.rs  commands.rs  mod.rs  types.rs
src/ui/src/routing/: routes.ts
src/ui/src/services/: heos.ts
src/ui/src/views/: DeviceSimulator.vue  MainMenu.vue
