[package]
name = "bs5-controller-ui"
version = "0.1.0"
description = "A Tauri App"
authors = ["Lars Baunwall"]
license = "Apache-2.0"
repository = "https://github.com/larsbaunwall/beolyd5"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
beolyd5_controller = "1.0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
